[tool.poetry]
name = "data-structure-and-algorithm"
version = "0.1.0"
description = ""
authors = ["SARAH AHMAD HUDAIB <SARAHHUDAIB@YAHOO.COM>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
